# systemc_crashcourse

./: example0.cpp  example1.cpp  example1.md  example2.cpp  example2.md  example3.cpp  example3.md  example4.cpp  example4.md  example5.cpp  example5.md  install.md  readme.md  simple_cpu_model.md
simple-cpu-model/: CMakeLists.txt  README.md
simple-cpu-model/src/: main.cpp
simple-cpu-model/src/cpu/: alu.cpp  alu.h  common.h  control_unit.cpp  control_unit.h  data_memory.cpp  data_memory.h  instruction_memory.cpp  instruction_memory.h  program_counter.cpp  program_counter.h  register_file.cpp  register_file.h
